--- a/react-api/public/index.html
+++ b/react-api/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.css">
+  <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.css">
   <link rel="stylesheet" href="https://bootswatch.com/_vendor/prismjs/themes/prism-okaidia.css">
 
   <title>React API</title>
