fix: change task name

--- a/react-router/public/index.html
+++ b/react-router/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.css">
   <link rel="stylesheet" href="https://bootswatch.com/_vendor/prismjs/themes/prism-okaidia.css">
 
-  <title>React API</title>
+  <title>React Router</title>
 </head>
 
 <body>
